--- a/Tp2/Informe/CasinoOnline.tex
+++ b/Tp2/Informe/CasinoOnline.tex
@@ -300,11 +300,19 @@ Presentamos aqui diagramas de secuencia del correcto ingreso al casino online.
 \newpage
 \imagen{0.5}{img/salirCrapsDenegado.PNG}{Salir en Craps Denegado}
 
+
 \newpage
+\subsection{Generacion de reportes}
+\subsubsection{Generacion de reporte: Ranking de Jugadores}
+\falta{ALGO}
 
+\newpage
+\subsubsection{Generacion de reporte: Estado Actual}
+\falta{ALGO}
 
-
-
+\newpage
+\subsubsection{Generacion de reporte: Detalle de movimientos por jugador}
+\falta{ALGO}
 
 %%\section{Escenarios en castellano y Diagramas de secuencias de operaciones mas relevantes}
 %%
