--- a/trunk/Tp2/toDo.txt
+++ b/trunk/Tp2/toDo.txt
@@ -5,3 +5,19 @@ meter informe imagen ya exportada del seleccionador
 
 exportar imagenes de apostar craps
 y salir tragamonedas aceptado
+
+
+SUBIR DIAGRAMA DE CLASES !!!!!!!!!!!!!!!!!
+
+
+
+
+
+
+
+
+------------------------------------
+
+MAÑANA SI O SI VER QUE SIRVE Y QUE NO DE "EAS Y EA"
+
+NO QUIERO PERDIDAS DE VERSIONES
