--- a/trunk/Tp2/toDo.txt
+++ b/trunk/Tp2/toDo.txt
@@ -15,6 +15,7 @@ y cosas q tengo anotas en mi cuaderno (mery)
 
 
 
+notificarEstadoCasino no lo vi (sin embargo lo tengo en el mp3 falta exportar a imagen)
 
 
 
