--- a/Tp2/Informe/CasinoOnline.tex
+++ b/Tp2/Informe/CasinoOnline.tex
@@ -315,15 +315,15 @@ El seleccionador de Tipo de jugada se encarga en un determinado momento seleccio
 \newpage
 \subsection{Generacion de reportes}
 \subsubsection{Generacion de reporte: Ranking de Jugadores}
-\falta{ALGO}
+\imagen{0.5}{img/rankingJugadores.PNG}{Ranking de Jugadores}
 
 \newpage
 \subsubsection{Generacion de reporte: Estado Actual}
-\falta{ALGO}
+\imagen{0.5}{img/reporteEstActual.PNG}{Estado Actual}
 
 \newpage
 \subsubsection{Generacion de reporte: Detalle de movimientos por jugador}
-\falta{ALGO}
+\falta{REPORTE DETALLE DE MOVIMIENTOS POR JUGADOR}
 
 
 
