--- a/Tp2/Informe/introduccion.tex
+++ b/Tp2/Informe/introduccion.tex
@@ -1,1 +1,38 @@
-INTRODUCCION 
+\subsection{Objetivo del documento}
+
+El objetivo de este documento es sentar las bases para la implementación del Casino On Line.
+Hemos tomado como punto de partida la especificacion aprobada por el departamento de calidad de software del grupo timbalista y a partir de ello construir el diseño utilizando principios que nos permitan asegurar la calidad del software a construir. 
+
+
+
+\subsection{Convenciones de notación}
+
+\subsection{Documentos relacionados}
+	
+	Los documentos relacionados con este proyecto son los que aquí se detallan:
+	
+\begin{itemize}
+	\item Arquitectura Conceptual de la Aplicación y Protocolo de comunicación del Casino OnLine y respectivas actualizaciones.
+\end{itemize}
+	
+\subsection{Organización del informe}
+
+\textbf{El Informe esta organizado de la siguiente manera:}
+
+\begin{Introduccion}
+	\item[Una introducción al mismo documento, y a los otros documentos relacionados para posibles consultas.] 
+\end{description}
+
+\begin{Vista Modular}
+	\item[En esta seccion describimos la metodologia que adoptamos para efectuar el diseño. En la vista modular se pueden ver los distintos bloques que se describiran en el resto del presente informel. Aqui tambien se puede ver la conexion entre estos bloques.] 
+\end{Vista Modular}
+
+\begin{Modulos}
+	\item[Aqui se describe la comunicacion que existe entre los distintos modulos de la VistaModular, explicada con anterioridad] 
+\end{Vista Modular}
+
+\begin{Funcionalidad Casino}
+	\item[En esta seccion se explican cada una de las funcionalidad con diagramas de secuencia. ] 
+\end{Funcionalidad Casino}
+
+
