--- a/trunk/Tp2/Informe/CasinoOnline.tex
+++ b/trunk/Tp2/Informe/CasinoOnline.tex
@@ -117,7 +117,7 @@ Para organizar el diseño, dividimos el problema en varios problemas independient
 	\item[Interprete] El modulo interprete se ocupa de tomar un mensaje e intentar trasformarlo a un lenguaje entendible por los servicios del casino, en caso de que el mensaje no corresponda al formato esperado, debera notificar al cliente. Para lograr esta transformacion hace uso del modulo Parser.
 	\item[Parser] Este modulo convierte los datos del lenguaje de comunicacion al lenguaje que maneja el casino y viceversa. Esto es para que la eleccion del lenguaje de cada una de estas partes sea independiente y no afecte al resto del sistema.
 	\item[Servicios] Este modulo nuclea todos los servicios que presenta el casino. El diseño del casino esta ocultado detras de este modulo para que la implementacion de estos servicios pueda ser modificada sin grandes efectos colaterales.
-	\item[Casino] Aqui esta el casino propiamente dicho, intependiente a toda forma de comunicacion y protocolo. Este modulo se encarga de realizar todo lo especificado en el informe I.
+	\item[Casino] Aqui esta el casino propiamente dicho, independiente a toda forma de comunicacion y protocolo. Este modulo se encarga de realizar todo lo especificado en el informe I.
 \end{description}
 \newpage
 
@@ -133,9 +133,9 @@ Para organizar el diseño, dividimos el problema en varios problemas independient
 \subsection{Mensajero / Interpretador}
 \label{sec:MensajeroInterpretador}
 
-Diseñamos un servicio ``core'' de mensajeria para que administre el la recepcion de mensajes independientemente del uso que se le de a ellos.\\
-Presentamos aqui un diagrama de secuencia un ejemplo de uso correcto del servicio de mensajeria.
-No nos compretemos a que la implementacion del servicio sea ``porArchivos'', pero respetará el modelo propuesto por la clase abstracta mensajero.
+Diseñamos un servicio ``core'' de mensajeria para que administre la recepcion de mensajes independientemente del uso que se le de a ellos.\\
+Presentamos aqui un diagrama de secuencia con un ejemplo de uso correcto del servicio de mensajeria.
+No nos comprometemos a que la implementacion del servicio sea ``porArchivos'', pero respetará el modelo propuesto por la clase abstracta mensajero.
 \imagen{0.50}{img/mensajeroSeq.PNG}{Diagrama de Secuencia: Mensajero}
 \newpage
 
@@ -150,7 +150,7 @@ Para completar la explicacion del diseño de este modulo necesitamos el diagrama 
 
 \subsection{Interpretador / Parser / Servicios}
 
-No hay mucha complejidadad en estas interacciones y estan suficientemente ilustradas en el diagrama de secuencia anterior. Presentamos el diagrame de clases de los modulos restantes.
+No hay mucha complejidad en estas interacciones y estan suficientemente ilustradas en el diagrama de secuencia anterior. Presentamos el diagrama de clases de los modulos restantes.
 
 \imagen{0.50}{img/interpretadorServicios.PNG}{Diagrama de Clases: Interpretador / Parser / Servicios}
 \newpage
@@ -170,11 +170,13 @@ En el momento de abrir el casino el sistema contará con un archivo XML (en el fu
 \\
 \textbf{Dicho archivo tendrá la siguiente sintaxis:}
 
+\begin{framed}
 \begin{verbatim}
 <jugadores>
     <jugador nombre="Nombre" saldo"valor numerico del saldo" vip="true | false">
 </jugadores>
 \end{verbatim}
+\end{framed}
 
 \subsubsection{Modificacion de saldo}
 
@@ -183,9 +185,9 @@ Mas alla de la operatoria, debará modificarse el archivo definido en el punto an
 
 \subsubsection{Ingreso y egreso del casino}
 
-En esta seccion estamos apuntando al ingreso de jugadores al casino (no al ingreso de jugadores observadores, dicha interaccion con el casino esta mostrada en la seccion Invitado)
+En esta seccion estamos apuntando al ingreso de jugadores al casino (no al ingreso de jugadores observadores, dicha interaccion con el casino esta expuesta en la seccion Invitado)
 
-Presentamos aqui diagramas de secuencia del correcto ingreso al casino online.
+Presentamos aqui diagramas de secuencia del correcto ingreso al Casino Online.
 
 \newpage
 
@@ -194,7 +196,7 @@ En este diagrama, observamos el mensaje del jugador ``Pepe'' que intenta loguear
 
 \newpage
 En este diagrama, observamos el mensaje del jugador ``Pepe'' que intenta desloguearse en el casino online como jugador desde que llega al modulo de servicios y es resuelto por el modulo casino. El casino realiza todas las comprobaciones pertinentes y al estar todo ``en regla'' desloggea al jugador y responde que la operacion pudo ser realizada.
-\imagen{0.5}{img/salir.PNG}{Jugador saliendo al casino aceptado}
+\imagen{0.5}{img/salir.PNG}{Jugador saliendo del casino aceptado}
 
 
 \newpage
@@ -202,6 +204,12 @@ En este diagrama, observamos el mensaje del jugador ``Pepe'' que intenta deslogu
 
 \subsubsection{Apertura del casino}
 
+La apertura del casino cuenta con algunos archivos de configuración.\\
+Los archivos vendran con la implementacion del casino y podran ser modificados por el administrador antes de abrir el casino.
+
+Estos archivos de momento tendrán formato XML. Este es un ejemplo de uno de estos archivos.
+
+\begin{framed}
 \begin{verbatim}
 <valorFichas>
         <valorFicha valor="" />
@@ -224,12 +232,19 @@ En este diagrama, observamos el mensaje del jugador ``Pepe'' que intenta deslogu
     </traga>
 </probablilidades>
 \end{verbatim}
+\end{framed}
 
 \newpage
+
+Veamos un diagrama donde se realiza la apertura del casino y se muestra la carga de estos archivos.
+
 \imagen{0.5}{img/abrirCasino.PNG}{Abrir Casino}
 
 \newpage
 \subsubsection{Clausura del casino}
+
+Veamos tambien un diagrama en el que el administrador procede a cerrar el casino.
+
 \imagen{0.5}{img/cerrarCasino.PNG}{Cerrar Casino}
 
 \newpage
@@ -237,7 +252,7 @@ En este diagrama, observamos el mensaje del jugador ``Pepe'' que intenta deslogu
 
 En esta seccion estamos apuntando al ingreso de invitados al casino.
 
-Presentamos aqui diagramas de secuencia del correcto ingreso al casino online.
+Presentamos aqui diagramas de secuencia del correcto ingreso y egreso de un invitado al casino online.
 
 \imagen{0.5}{img/entrarInvitado.PNG}{Jugador entrando del casino aceptado}
 
@@ -249,24 +264,34 @@ Presentamos aqui diagramas de secuencia del correcto ingreso al casino online.
 
 \subsubsection{Inicio de Modo Dirigido}
 
+En el momento de entrar en modo dirigido, se deberán configurar el resultado que obtendran los juegos y qué jugadas deberán ir saliendo, ya que a partir de ese momento el azar no intervendrá en estos eventos.
+
 \imagen{0.5}{img/setModoDirigido.PNG}{Inicio de Modo Dirigido}
 
 \newpage
 \subsubsection{Seteo de Jugadas Feliz y Todos Ponen}
 
+Una vez que el modo dirigido esta habilitado, se podra decidir la ocurrencia de jugadas felices y todos ponen para un juego y mesa particular.
+\vskip1cm
+Escenario donde un manipulador setea una jugada feliz en la proxima jugada de la mesa 20 de Tragamonedas.
+
 \imagen{0.5}{img/setJugFelizDirigida.PNG}{Seteo de Jugadas Feliz}
+
 \newpage
+Escenario donde un manipulador setea una jugada todos ponen en la proxima jugada de la mesa 15 de Tragamonedas.
 \imagen{0.5}{img/setearTodosPonenDir.PNG}{Seteo de Todos Ponen}
 
 \newpage
 \subsubsection{Finalización de Modo Dirigido}
+
+Escenario donde se deshabilita el modo dirigido para volver al modo normal. Asi se habilitaran nuevamente los resultados y seteo de Tipo de jugada azarosos.
 
 \imagen{0.5}{img/resetModoDirigido.PNG}{Finalización de Modo Dirigido}
 
 \newpage
 \subsection{Seleccionador de Tipo de jugada}
 
-El seleccionador de Tipo de jugada se encarga en un determinado momento seleccionar el tipo de jugada para una jugada de una mesa. El el momento de la creacion se una jugada, se invoca al seleccionador que segun el criterio de seleccion (por ej: el modo en que se encuentra el casino), seleccionará a un selector de tipo de jugada (por ej: Selector aleatorio - Selector probabilistico) que elige un tipo de jugada.
+El seleccionador de Tipo de jugada se encarga de, en un determinado momento, seleccionar el tipo de jugada para una jugada de una mesa. En el momento de la creacion de una jugada, se invoca al seleccionador que segun el criterio de seleccion (por ej: el modo en que se encuentra el casino), seleccionará a un selector de tipo de jugada (por ej: Selector aleatorio - Selector probabilistico) que elige un tipo de jugada.
 
 \imagen{0.5}{img/seleccionador.PNG}{Seleccionador de Tipo de Jugada}
 
@@ -274,6 +299,8 @@ El seleccionador de Tipo de jugada se encarga en un determinado momento seleccio
 \newpage
 \subsection{Juego Tragamonedas}
 \subsubsection{Entrar en Tragamonedas}
+
+
 \imagen{0.5}{img/entradaTragaAceptado.PNG}{Entrar en Traga Aceptado}
 
 \newpage
