--- a/trunk/Tp2/Informe/CasinoOnline.tex
+++ b/trunk/Tp2/Informe/CasinoOnline.tex
@@ -106,7 +106,7 @@ Para organizar el diseño, dividimos el problema en varios problemas independient
 
 \subsection{Modulos Server}
 
-\imagen{0.70}{img/componentes.PNG}{Vista Modular Server}
+\imagen{0.70}{img/componentes.png}{Vista Modular Server}
 
 \newpage
 \paragraph{Descripcion de cada uno de los modulos}
@@ -123,7 +123,7 @@ Para organizar el diseño, dividimos el problema en varios problemas independient
 
 \subsection{Modulos Cliente y Administrador}
 
-\imagen{0.70}{img/componentesCliente.PNG}{Vista Modular Cliente}
+\imagen{0.70}{img/componentesCliente.png}{Vista Modular Cliente}
 
 \newpage
 
@@ -136,23 +136,23 @@ Para organizar el diseño, dividimos el problema en varios problemas independient
 Diseñamos un servicio ``core'' de mensajeria para que administre la recepcion de mensajes independientemente del uso que se le de a ellos.\\
 Presentamos aqui un diagrama de secuencia con un ejemplo de uso correcto del servicio de mensajeria.
 No nos comprometemos a que la implementacion del servicio sea ``porArchivos'', pero respetará el modelo propuesto por la clase abstracta mensajero.
-\imagen{0.50}{img/mensajeroSeq.PNG}{Diagrama de Secuencia: Mensajero}
+\imagen{0.50}{img/mensajeroSeq.png}{Diagrama de Secuencia: Mensajero}
 \newpage
 
 Ahora veamos mas en particular la operacion \textbf{OnMessage}. Esta operacion invoca al listener asociado al mensajero, dicha clase dira al mensajero que operacion realizar en el momento de recibir un mensaje.
-\imagen{0.50}{img/onMessageSeq.PNG}{Diagrama de Secuencia: OnMessage}
+\imagen{0.50}{img/onMessageSeq.png}{Diagrama de Secuencia: OnMessage}
 \newpage
 
 Para completar la explicacion del diseño de este modulo necesitamos el diagrama de clases.
 
-\imagen{0.50}{img/mensajeroInterpretador.PNG}{Diagrama de Clases: Mensajero / Interpretador}
+\imagen{0.50}{img/mensajeroInterpretador.png}{Diagrama de Clases: Mensajero / Interpretador}
 \newpage
 
 \subsection{Interpretador / Parser / Servicios}
 
 No hay mucha complejidad en estas interacciones y estan suficientemente ilustradas en el diagrama de secuencia anterior. Presentamos el diagrama de clases de los modulos restantes.
 
-\imagen{0.50}{img/interpretadorServicios.PNG}{Diagrama de Clases: Interpretador / Parser / Servicios}
+\imagen{0.50}{img/interpretadorServicios.png}{Diagrama de Clases: Interpretador / Parser / Servicios}
 \newpage
 
 \subsection{Casino}
@@ -192,12 +192,13 @@ Presentamos aqui diagramas de secuencia del correcto ingreso al Casino Online.
 \newpage
 
 En este diagrama, observamos el mensaje del jugador ``Pepe'' que intenta loguearse en el casino online como jugador desde que llega al modulo de servicios y es resuelto por el modulo casino. El casino realiza todas las comprobaciones pertinentes y al estar todo ``en regla'' loggea al jugador y responde que la operacion pudo ser realizada.
-\imagen{0.5}{img/entrar.PNG}{Jugador entrando al casino aceptado}
+\imagen{0.5}{img/entrar.png}{Jugador entrando al casino aceptado}
 
 \newpage
 En este diagrama, observamos el mensaje del jugador ``Pepe'' que intenta desloguearse en el casino online como jugador desde que llega al modulo de servicios y es resuelto por el modulo casino. El casino realiza todas las comprobaciones pertinentes y al estar todo ``en regla'' desloggea al jugador y responde que la operacion pudo ser realizada.
-\imagen{0.5}{img/salir.PNG}{Jugador saliendo del casino aceptado}
+\imagen{0.5}{img/salir.png}{Jugador saliendo del casino aceptado}
 
+Si asi lo desea, un jugador pude solicitarle al casino su estado. Ver \ref{notCas}
 
 \newpage
 \subsection{Administracion del Casino}
@@ -238,14 +239,14 @@ Estos archivos de momento tendrán formato XML. Este es un ejemplo de uno de esto
 
 Veamos un diagrama donde se realiza la apertura del casino y se muestra la carga de estos archivos.
 
-\imagen{0.5}{img/abrirCasino.PNG}{Abrir Casino}
+\imagen{0.5}{img/abrirCasino.png}{Abrir Casino}
 
 \newpage
 \subsubsection{Clausura del casino}
 
 Veamos tambien un diagrama en el que el administrador procede a cerrar el casino.
 
-\imagen{0.5}{img/cerrarCasino.PNG}{Cerrar Casino}
+\imagen{0.5}{img/cerrarCasino.png}{Cerrar Casino}
 
 \newpage
 \subsection{Invitado}
@@ -254,10 +255,12 @@ En esta seccion estamos apuntando al ingreso de invitados al casino.
 
 Presentamos aqui diagramas de secuencia del correcto ingreso y egreso de un invitado al casino online.
 
-\imagen{0.5}{img/entrarInvitado.PNG}{Jugador entrando del casino aceptado}
+\imagen{0.5}{img/entrarInvitado.png}{Jugador entrando del casino aceptado}
 
 \newpage
-\imagen{0.5}{img/salirInvitado.PNG}{Jugador saliendo del casino aceptado}
+\imagen{0.5}{img/salirInvitado.png}{Jugador saliendo del casino aceptado}
+
+Si asi lo requiere, el invitado puede pedir el estado del Casino. Ver \ref{notCas}
 
 \newpage
 \subsection{Modo Dirigido}
@@ -266,7 +269,7 @@ Presentamos aqui diagramas de secuencia del correcto ingreso y egreso de un invi
 
 En el momento de entrar en modo dirigido, se deberán configurar el resultado que obtendran los juegos y qué jugadas deberán ir saliendo, ya que a partir de ese momento el azar no intervendrá en estos eventos.
 
-\imagen{0.5}{img/setModoDirigido.PNG}{Inicio de Modo Dirigido}
+\imagen{0.5}{img/setModoDirigido.png}{Inicio de Modo Dirigido}
 
 \newpage
 \subsubsection{Seteo de Jugadas Feliz y Todos Ponen}
@@ -275,25 +278,25 @@ Una vez que el modo dirigido esta habilitado, se podra decidir la ocurrencia de 
 \vskip1cm
 Escenario donde un manipulador setea una jugada feliz en la proxima jugada de la mesa 20 de Tragamonedas.
 
-\imagen{0.5}{img/setJugFelizDirigida.PNG}{Seteo de Jugadas Feliz}
+\imagen{0.5}{img/setJugFelizDirigida.png}{Seteo de Jugadas Feliz}
 
 \newpage
 Escenario donde un manipulador setea una jugada todos ponen en la proxima jugada de la mesa 15 de Tragamonedas.
-\imagen{0.5}{img/setearTodosPonenDir.PNG}{Seteo de Todos Ponen}
+\imagen{0.5}{img/setearTodosPonenDir.png}{Seteo de Todos Ponen}
 
 \newpage
 \subsubsection{Finalización de Modo Dirigido}
 
 Escenario donde se deshabilita el modo dirigido para volver al modo normal. Asi se habilitaran nuevamente los resultados y seteo de Tipo de jugada azarosos.
 
-\imagen{0.5}{img/resetModoDirigido.PNG}{Finalización de Modo Dirigido}
+\imagen{0.5}{img/resetModoDirigido.png}{Finalización de Modo Dirigido}
 
 \newpage
 \subsection{Seleccionador de Tipo de jugada}
 
 El seleccionador de Tipo de jugada se encarga de, en un determinado momento, seleccionar el tipo de jugada para una jugada de una mesa. En el momento de la creacion de una jugada, se invoca al seleccionador que segun el criterio de seleccion (por ej: el modo en que se encuentra el casino), seleccionará a un selector de tipo de jugada (por ej: Selector aleatorio - Selector probabilistico) que elige un tipo de jugada.
 
-\imagen{0.5}{img/seleccionador.PNG}{Seleccionador de Tipo de Jugada}
+\imagen{0.5}{img/seleccionador.png}{Seleccionador de Tipo de Jugada}
 
 
 \newpage
@@ -301,64 +304,69 @@ El seleccionador de Tipo de jugada se encarga de, en un determinado momento, sel
 \subsubsection{Entrar en Tragamonedas}
 
 
-\imagen{0.5}{img/entradaTragaAceptado.PNG}{Entrar en Traga Aceptado}
+\imagen{0.5}{img/entradaTragaAceptado.png}{Entrar en Traga Aceptado}
 
 \newpage
-\imagen{0.5}{img/entradaTragaDenegada.PNG}{Entrar en Traga Denegado}
+\imagen{0.5}{img/entradaTragaDenegada.png}{Entrar en Traga Denegado}
 
 \newpage
 \subsubsection{Apostar en Tragamonedas}
-\imagen{0.4}{img/ApostarTragaAceptado.PNG}{Apostar en Traga Aceptado}
+\imagen{0.4}{img/ApostarTragaAceptado.png}{Apostar en Traga Aceptado}
 
 \newpage
-\imagen{0.5}{img/ApostarTragaDenegado.PNG}{Apostar en Traga Denegado}
+\imagen{0.5}{img/ApostarTragaDenegado.png}{Apostar en Traga Denegado}
 
 \newpage
 \subsubsection{Tirar en Tragamonedas}
-\imagen{0.4}{img/tirarTragaAceptado.PNG}{Tirar en Traga Aceptado}
+\imagen{0.4}{img/tirarTragaAceptado.png}{Tirar en Traga Aceptado}
 \newpage
-\imagen{0.5}{img/tirarTragaDenegado.PNG}{Tirar en Traga Denegado}
+\imagen{0.5}{img/tirarTragaDenegado.png}{Tirar en Traga Denegado}
 
 \newpage
 \subsubsection{Salir en Tragamonedas}
-\imagen{0.5}{img/salidaTragaAceptado.PNG}{Salir en Traga Aceptado}
+\imagen{0.5}{img/salidaTragaAceptado.png}{Salir en Traga Aceptado}
 \newpage
-\imagen{0.5}{img/salirTragaDenegado.PNG}{Salir en Traga Denegado}
+\imagen{0.5}{img/salirTragaDenegado.png}{Salir en Traga Denegado}
 
 \newpage
 \subsection{Juego Craps}
 \subsubsection{Entrar en Craps}
-\imagen{0.5}{img/entradaCrapsAceptadoAbrir.PNG}{Entrar (Abrir mesa) en Craps Aceptado}
+\imagen{0.5}{img/entradaCrapsAceptadoAbrir.png}{Entrar (Abrir mesa) en Craps Aceptado}
 
 \newpage
-\imagen{0.5}{img/EntrarCrapsAceptadaUnirse.PNG}{Entrar (Unirse) en Craps Aceptado}
+\imagen{0.5}{img/EntrarCrapsAceptadaUnirse.png}{Entrar (Unirse) en Craps Aceptado}
 
 \newpage
-\imagen{0.5}{img/EntrarCrapsDenegado.PNG}{Entrar en Craps Denegado}
+\imagen{0.5}{img/EntrarCrapsDenegado.png}{Entrar en Craps Denegado}
 
 \newpage
 \subsubsection{Apostar en Craps}
-\imagen{0.5}{img/ApostarCrapsAceptado.PNG}{Apostar en Craps Aceptado}
+\imagen{0.5}{img/ApostarCrapsAceptado.png}{Apostar en Craps Aceptado}
 
 \newpage
 \subsubsection{Tirar en Craps}
-\imagen{0.5}{img/TirarCraps.PNG}{Tirar en Craps Aceptado}
+\imagen{0.5}{img/TirarCraps.png}{Tirar en Craps Aceptado}
 
 \newpage
 \subsubsection{Salir en Craps}
-\imagen{0.5}{img/SalidaCrapsAceptado.PNG}{Salir en Craps Aceptado}
+\imagen{0.5}{img/SalidaCrapsAceptado.png}{Salir en Craps Aceptado}
 \newpage
-\imagen{0.5}{img/salirCrapsDenegado.PNG}{Salir en Craps Denegado}
+\imagen{0.5}{img/salirCrapsDenegado.png}{Salir en Craps Denegado}
 
+\newpage
+\subsection{Notificar Estado Casino \label{notCas}}
+Tanto el invitado como un jugador pueden querer observador el estado del casino, preguntandoselo al mismo. El diagrama que sigue describe como el casino obtiene los datos para luego notificarselos a quien lo solicite  
+
+\imagen{0.5}{img/notificarEstCasino.png}{Notificar Estado Casino}
 
 \newpage
 \subsection{Generacion de reportes}
 \subsubsection{Generacion de reporte: Ranking de Jugadores}
-\imagen{0.5}{img/rankingJugadores.PNG}{Ranking de Jugadores}
+\imagen{0.5}{img/rankingJugadores.png}{Ranking de Jugadores}
 
 \newpage
 \subsubsection{Generacion de reporte: Estado Actual}
-\imagen{0.5}{img/reporteEstActual.PNG}{Estado Actual}
+\imagen{0.5}{img/reporteEstActual.png}{Estado Actual}
 
 \newpage
 \subsubsection{Generacion de reporte: Detalle de movimientos por jugador}
