--- a/trunk/Tp2/Informe/CasinoOnline.tex
+++ b/trunk/Tp2/Informe/CasinoOnline.tex
@@ -156,6 +156,17 @@ No hay mucha complejidad en estas interacciones y estan suficientemente ilustrad
 \newpage
 
 \subsection{Casino}
+
+\imagen{0.40}{img/CasinoJugadorInvitadoClases.PNG}{Diagrama de Clases: Casino / Jugador / Invitado / TipoJugada}
+\newpage
+
+\imagen{0.40}{img/TragamonedasClases.PNG}{Diagrama de Clases: Traga}
+\newpage
+
+\imagen{0.40}{img/CrapsClases.PNG}{Diagrama de Clases: Craps}
+\newpage
+
+\imagen{0.40}{img/MensajesClases.PNG}{Diagrama de Clases: Mensajes}
 \newpage
 
 \section{Funcionalidad Casino}
